--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "mern",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryanlow-rp/mern.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ryanlow-rp/mern/issues"
-  },
-  "homepage": "https://github.com/ryanlow-rp/mern#readme"
+    "name": "mern",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ryanlow-rp/mern.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ryanlow-rp/mern/issues"
+    },
+    "homepage": "https://github.com/ryanlow-rp/mern#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "mysql2": "^3.4.0",
+        "nodemon": "^2.0.22",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0"
+    }
 }
