--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/ryanlow-rp/mern#readme",
     "dependencies": {
         "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
