--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "fs": "^0.0.1-security",
         "mysql2": "^3.4.0",
         "nodemon": "^2.0.22",
         "passport": "^0.6.0",
